# manageStock

./: .gitignore  README.md  key.jks  pubspec.yaml
android/: build.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: com_cirtait_mobile_gestmob_serialport_SerialPort.c  com_cirtait_mobile_gestmob_serialport_SerialPort.h
android/app/src/main/kotlin/com/cirtait/flutter/gestmob/: MainActivity.kt
android/app/src/main/kotlin/com/cirtait/gestmob/: MainActivity.kt
android/app/src/main/kotlin/com/cirtait/mobile/gestmob/: BarcodeScanner.java  ByteUtil.java  CodeChangeListner.kt  MainActivity.kt  MyBroadcastReceiver.kt  ScanCodeCallback.java  ScanIntentService.java  ScannerConstants.java  VolumeSettingReceiver.java
android/app/src/main/kotlin/com/cirtait/mobile/gestmob/serialport/: SerialPort.java  SerialPortFinder.java
android/app/src/main/res/drawable/: gradient_background.xml  launch_background.xml
android/app/src/main/res/drawable-ar/: launch_background.xml
android/app/src/main/res/values/: colors.xml  string.xml
android/app/src/main/res/values-ar/: string.xml
android/app/src/profile/: AndroidManifest.xml
assets/data/: maphtmlpage.html
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/Helpers/: Helpers.dart  QueryCtr.dart  SqlLiteDatabaseHelper.dart  Statics.dart  TouchIdUtil.dart  country_utils.dart  local_notification.dart  route_generator.dart  (+1 more)
(+89 files in other folders)
